--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.5
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
@@ -11,8 +12,11 @@ httptools==0.7.1
 httpx==0.28.1
 idna==3.11
 iniconfig==2.1.0
+Mako==1.3.10
+MarkupSafe==3.0.3
 packaging==25.0
 pluggy==1.6.0
+psycopg2-binary==2.9.11
 pydantic==2.12.4
 pydantic-settings==2.11.0
 pydantic_core==2.41.5
@@ -21,6 +25,7 @@ pytest==8.4.2
 python-dotenv==1.2.1
 PyYAML==6.0.3
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 starlette==0.49.3
 tomli==2.3.0
 typing-inspection==0.4.2
