--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ fastapi==0.121.2
 filelock==3.19.1
 h11==0.16.0
 httpcore==1.0.9
-httptools==0.7.1
+
 httpx==0.28.1
 identify==2.6.15
 idna==3.11
@@ -38,9 +38,11 @@ pydantic-settings==2.11.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==8.4.2
+pytest-asyncio>=0.23
 python-dotenv==1.2.1
 PyYAML==6.0.3
 questionary==2.1.1
+redis>=4.5.0
 ruff==0.14.5
 sniffio==1.3.1
 SQLAlchemy==2.0.44
@@ -51,7 +53,7 @@ tomlkit==0.13.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
-uvloop==0.22.1
+
 virtualenv==20.35.4
 watchfiles==1.1.1
 wcwidth==0.2.14
