refactor: adds alembic, splits wishlist to use platform wide email service, adds standardised api responses

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-APP_NAME=SiteMate AI Backend
-DEBUG=True
 DATABASE_URL=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=                                            
