--- a/.github/workflows/branch-name-check.yml
+++ b/.github/workflows/branch-name-check.yml
@@ -25,17 +25,18 @@ jobs:
             exit 0
           fi
 
-          # Enforce ClickUp-style ID in feature branches
-          # e.g., feature/ABC-123-add-scan-endpoint
-          if echo "$BRANCH" | grep -Eq '^(feature|fix|chore|hotfix|bugfix|refactor)/[A-Za-z]+-[0-9]+(-[a-z0-9-]*)?$'; then
-            echo "✅ Valid feature branch with ClickUp ID: $BRANCH"
+          # Enforce simple feature branch naming, e.g. feature/what-i-am-working-on
+          if echo "$BRANCH" | grep -Eq '^(feature|fix|chore|hotfix|bugfix|refactor)/[a-z0-9-]+$'; then
+            echo "✅ Valid feature branch name: $BRANCH"
             exit 0
           fi
 
           echo "❌ Invalid branch name: $BRANCH"
           echo "Branch name must match one of the following:"
           echo "  - main, master, dev, develop, staging, hotfix, release"
-          echo "  - feature/<TICKET-ID>-slug (e.g., feature/ABC-123-add-scan-endpoint)"
-          echo "  - fix/<TICKET-ID>-slug"
-          echo "  - chore/<TICKET-ID>-slug"
+          echo "  - <type>/<slug>, e.g.:"
+          echo "      feature/setup-fastapi-backend"
+          echo "      fix/health-endpoint-timeout"
+          echo "      chore/update-readme"
+          echo "      refactor/split-db-layer"
           exit 1
