--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "greenlet==3.2.4",
     "h11==0.16.0",
     "idna==3.11",
-    "pydantic==2.12.4",
+    "psycopg[binary]>=3.2.12",
+    "pydantic[email]==2.12.4",
     "pydantic-core==2.41.5",
     "python-dotenv==1.2.1",
     "sniffio==1.3.1",
@@ -22,6 +23,11 @@ dependencies = [
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.2",
     "uvicorn==0.38.0",
+    "alembic>=1.17.2",
+    "python-jose[cryptography]>=3.5.0",
+    "google-auth>=2.43.0",
+    "google-auth-oauthlib>=1.2.2",
+    "pydantic-settings>=2.12.0",
 ]
 
 # ------------------------
@@ -41,6 +47,7 @@ select = [
 ]
 ignore = [
   "E501",
+  "B008"
 ]
 
 [tool.ruff.format]
