--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "google-auth>=2.43.0",
     "google-auth-oauthlib>=1.2.2",
     "pydantic-settings>=2.12.0",
+    "pytest>=9.0.1",
 ]
 
 # ------------------------
@@ -53,3 +54,9 @@ ignore = [
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+]
