--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "annotated-doc==0.0.4",
     "annotated-types==0.7.0",
     "anyio==4.11.0",
+    "bcrypt==4.1.2",
     "click==8.3.1",
     "fastapi==0.121.2",
     "greenlet==3.2.4",
@@ -23,6 +24,10 @@ dependencies = [
     "typing-inspection==0.4.2",
     "uvicorn==0.38.0",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["app*"]
 
 # ------------------------
 # RUFF CONFIG
