--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "uvicorn==0.38.0",
     "bcrypt>=5.0.0",
     "pyjwt>=2.10.1",
+    "asyncpg>=0.30.0",
 ]
 
 # ------------------------
