--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "annotated-doc==0.0.4",
     "annotated-types==0.7.0",
     "anyio==4.11.0",
+    "asyncpg>=0.30.0",
     "bcrypt==4.1.2",
     "click==8.3.1",
     "email-validator==2.1.1",
@@ -16,6 +17,7 @@ dependencies = [
     "greenlet==3.2.4",
     "h11==0.16.0",
     "idna==3.11",
+    "psycopg[binary]>=3.0",
     "PyJWT==2.8.0",
     "pydantic==2.12.4",
     "pydantic-core==2.41.5",
