--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ dependencies = [
     "fastapi==0.121.2",
     "greenlet==3.2.4",
     "h11==0.16.0",
+    "httpx>=0.28.1",
     "idna==3.11",
     "pydantic==2.12.4",
     "pydantic-core==2.41.5",
     "python-dotenv==1.2.1",
+    "redis>=7.0.1",
     "sniffio==1.3.1",
     "sqlalchemy==2.0.44",
     "starlette==0.49.3",
