--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ dependencies = [
     "annotated-doc==0.0.4",
     "annotated-types==0.7.0",
     "anyio==4.11.0",
+    "asyncpg>=0.30.0",
     "click==8.3.1",
     "fastapi==0.121.2",
     "greenlet==3.2.4",
     "h11==0.16.0",
     "httpx>=0.28.1",
     "idna==3.11",
-    "pydantic==2.12.4",
+    "pydantic[email]==2.12.4",
     "pydantic-core==2.41.5",
     "python-dotenv==1.2.1",
     "redis>=7.0.1",
@@ -24,6 +25,8 @@ dependencies = [
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.2",
     "uvicorn==0.38.0",
+    "bcrypt>=5.0.0",
+    "pyjwt>=2.10.1",
 ]
 
 # ------------------------
