--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Sitelytics Backend Service"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "annotated-doc==0.0.4",
     "annotated-types==0.7.0",
     "anyio==4.11.0",
@@ -13,7 +14,7 @@ dependencies = [
     "greenlet==3.2.4",
     "h11==0.16.0",
     "idna==3.11",
-    "pydantic==2.12.4",
+    "pydantic[email]==2.12.4",
     "pydantic-core==2.41.5",
     "python-dotenv==1.2.1",
     "sniffio==1.3.1",
@@ -22,6 +23,8 @@ dependencies = [
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.2",
     "uvicorn==0.38.0",
+    "bcrypt>=5.0.0",
+    "pyjwt>=2.10.1",
 ]
 
 # ------------------------
@@ -46,3 +49,10 @@ ignore = [
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+]
