feat: implement password reset functionality with email notifications

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,19 @@
 APP_NAME=SiteMate AI Backend
 DEBUG=True
-DATABASE_URL=
+DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/dbname
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=noreply@yourapp.com
+MAIL_FROM_NAME="Your App Name"
+
+
+SENDGRID_API_KEY=SG.your-sendgrid-api-key-here
+
+
+FRONTEND_URL=https://myfrontend.com
