--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 argcomplete==3.6.3
+asyncpg==0.30.0
 certifi==2025.11.12
 cfgv==3.4.0
 charset-normalizer==3.4.4
@@ -28,6 +29,7 @@ Mako==1.3.10
 MarkupSafe==3.0.3
 nodeenv==1.9.1
 packaging==25.0
+passlib[bcrypt]==1.7.4
 platformdirs==4.4.0
 pluggy==1.6.0
 pre_commit==4.3.0
@@ -39,9 +41,11 @@ pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==8.4.2
 python-dotenv==1.2.1
+python-multipart==0.0.20
 PyYAML==6.0.3
 questionary==2.1.1
 ruff==0.14.5
+sendgrid==6.11.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.49.3
