chore: updated .env.example,fixed cache_ttl

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,8 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=
-MAIL_FROM_NAME=                                            
+MAIL_FROM_NAME=   
+
+# redis Configuration
+REDIS_URL = redis://localhost:6379/0
+WAITLIST_STATS_CACHE_TTL = 300
