chore: config files

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
 pythonpath = .
+; this disable warnings about Pydantic deprecations since version 2.0
+filterwarnings = ignore::pydantic.PydanticDeprecatedSince20
