--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "greenlet==3.2.4",
     "h11==0.16.0",
     "idna==3.11",
-    "pydantic==2.12.4",
+    "pydantic[email]==2.12.4",
     "pydantic-core==2.41.5",
     "python-dotenv==1.2.1",
     "sniffio==1.3.1",
@@ -21,7 +21,18 @@ dependencies = [
     "starlette==0.49.3",
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.2",
+    "uuid-extension>=0.2.0",
     "uvicorn==0.38.0",
+    "psycopg[binary]>=3.2.12",
+    "bcrypt>=5.0.0",
+    "google-auth>=2.43.0",
+    "requests>=2.32.5",
+    "alembic>=1.17.2",
+    "pyjwt>=2.10.1",
+    "pytest>=9.0.1",
+    "httpx>=0.28.1",
+    "pytest-asyncio>=1.3.0",
+    "pydantic-settings>=2.12.0",
 ]
 
 # ------------------------
