--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi==0.121.2",
     "greenlet==3.2.4",
     "h11==0.16.0",
+    "httpx==0.27.2",
     "idna==3.11",
     "pydantic==2.12.4",
     "pydantic-core==2.41.5",
