--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "idna==3.11",
     "pydantic==2.12.4",
     "pydantic-core==2.41.5",
+    "pytest==8.3.4",
+    "pytest-asyncio==0.25.1",
     "python-dotenv==1.2.1",
     "sniffio==1.3.1",
     "sqlalchemy==2.0.44",
@@ -23,6 +25,7 @@ dependencies = [
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.2",
     "uvicorn==0.38.0",
+    "uuid-extension==0.2.0",
 ]
 
 # ------------------------
