--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "uvicorn==0.38.0",
     "bcrypt>=5.0.0",
     "pyjwt>=2.10.1",
+    "uuid-extension>=0.2.0",
 ]
 
 # ------------------------
