--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dependencies = [
     "uvicorn==0.38.0",
     "bcrypt>=5.0.0",
     "pyjwt>=2.10.1",
+    "uuid7>=0.1.0",
+    "uuid6>=2025.0.1",
+    "uuid-extension>=0.2.0",
 ]
 
 # ------------------------
