--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,13 @@ dependencies = [
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.2",
     "uvicorn==0.38.0",
+
+    # Newly added runtime deps
+    "bcrypt==5.0.0",
+    "PyJWT==2.10.1",
+    "uuid-extension==0.2.0",
+    "email-validator==2.2.0",
+
 ]
 
 # ------------------------
