--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,12 @@ dependencies = [
     "PyJWT==2.10.1",
     "uuid-extension==0.2.0",
     "email-validator==2.2.0",
-
     "bcrypt>=5.0.0",
     "pyjwt>=2.10.1",
     "uuid7>=0.1.0",
     "uuid6>=2025.0.1",
     "uuid-extension>=0.2.0",
+    "asyncpg>=0.30.0",
 ]
 
 # ------------------------
