fix: update woekflow runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ concurrency:
 
 jobs:
   tests:
-    runs-on: site-audit-runner
+    runs-on: self-hosted
     env:
       DATABASE_URL: sqlite+aiosqlite:///./site_audit.db
     steps:
