--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt install python3.12-venv
           python3 -m venv venv
           source venv/bin/activate
           uv sync 
