--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Set up Python with uv
         uses: astral-sh/setup-uv@v2
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
       - name: Install dependencies
         run: |
-          sudo apt install python3.12-venv
+          sudo apt install python3.12-venv -y
           python3 -m venv venv
           source venv/bin/activate
           uv sync 
