--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Run Alembic migrations
         run: |
           source venv/bin/activate
+          pip install alembic
           uv run alembic upgrade head
 
       - name: Generate migration revision
