--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ dependencies = [
     "fastapi==0.121.2",
     "greenlet==3.2.4",
     "h11==0.16.0",
-    "httpx==0.27.2",
+    "httpx>=0.27.2",
     "idna==3.11",
     "pydantic[email]==2.12.4",
     "pydantic-core==2.41.5",
-    "pytest==8.3.4",
-    "pytest-asyncio==0.25.1",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.1",
     "pydantic-settings==2.5.2",
     "python-dotenv==1.2.1",
     "sniffio==1.3.1",
