--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "uuid6>=2025.0.1",
     "uuid-extension>=0.2.0",
     "asyncpg>=0.30.0",
+    "alembic>=1.17.2",
+    "psycopg2>=2.9.11",
 ]
 
 # ------------------------
