--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "asyncpg>=0.30.0",
     "psycopg[binary]>=3.2.12",
+    "psycopg2-binary>=2.9.11",
 ]
 
 # ------------------------
