--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           source venv/bin/activate
           uv sync
+          uv add psycopg2-binary
 
       - name: Run Alembic migrations
         run: |
