--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,17 @@
-# For local development (SQLite):
-DATABASE_URL=sqlite+aiosqlite:///./site_audit.db
 
 # For production (PostgreSQL):
-# DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/site_audit_db
+DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/site_audit_db
 
 # JWT Configuration
-JWT_SECRET_KEY=your-secret-key
+JWT_SECRET_KEY=test-secret-key-for-development
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-# Email Configuration
-MAIL_HOST=
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=test@example.com
+MAIL_PASSWORD=dummy_password
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=
-MAIL_FROM_NAME=                                            
+MAIL_FROM_ADDRESS=test@example.com
+MAIL_FROM_NAME=Site Audit AI
+                                         
