--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "alembic>=1.17.2",
     "psycopg2-binary>=2.9.11",
+    "psycopg>=3.2.12",
 ]
 
 # ------------------------
