--- a/.github/workflows/cd_prod.yml
+++ b/.github/workflows/cd_prod.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   prod-deployment:
-    runs-on: hng-13-runner
+    runs-on: self-hosted
     env:
       DEPLOY_ENV: production
       DEPLOY_HOST: ${{ secrets.PROD_HOST }}
@@ -98,15 +98,18 @@ jobs:
               cd "$APP_DIR"
 
               sudo apt-get update -y
-              sudo apt-get install -y python3 python3-venv python3-pip nginx certbot python3-certbot-nginx curl
+              sudo apt-get install -y python3 python3-venv python3-pip nginx certbot python3-certbot-nginx curl libpq-dev
+
+              python3.12 -m venv venv
+              source venv/bin/activate
 
               if ! command -v uv >/dev/null 2>&1; then
                 curl -LsSf https://astral.sh/uv/install.sh | sh
                 export PATH="$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
               fi
-
-              uv sync --locked --group dev
-
+              
+              uv add psycopg psycopg2-binary
+              uv sync 
               uv run alembic upgrade head
 
               NGINX_SITE="/etc/nginx/sites-available/${SERVICE}.conf"
