(feat): user profile management endpoints, profile_url and phone_number added to model

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ __pycache__
 .vscode
 .pytest_cache
 .ruff_cache
-*.db
 local/
+static/uploads/profile-pictures/*
+!static/uploads/profile-pictures/.gitkeep
