fix: add database clean up

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,9 @@ jobs:
           source venv/bin/activate
           uv run pytest
 
+      - name: Clean CI Database
+        env:
+          DATABASE_URL: ${{ secrets.CI_DB }}
+        run: |
+          psql $DATABASE_URL -c "DROP SCHEMA public CASCADE; CREATE SCHEMA public;"
+
