Remove alembic versions from tracking (already in .gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ local/
 static/uploads/profile-pictures/*
 !static/uploads/profile-pictures/.gitkeep
 *.db
-
+alembic/versions
+site_audit_ai_be.egg-info/
