--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ dependencies = [
     "psycopg[binary]>=3.2.12",
 ]
 
+[tool.setuptools.packages.find]
+include = ["app*"]
+
 # ------------------------
 # RUFF CONFIG
 # ------------------------
