--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
           uv run python -c "
           import psycopg2
           from urllib.parse import urlparse
+          
           def parse_postgres_url(url: str) -> dict[str, str]:
               """
               Parse a SQLAlchemy/PostgreSQL URL like:
@@ -75,24 +76,24 @@ jobs:
               """
               parsed = urlparse(url)
               # `parsed.netloc` still contains credentials, so rely on the dedicated attrs
-              username = parsed.username or ""
-              password = parsed.password or ""
-              host = parsed.hostname or ""
+              username = parsed.username or ''
+              password = parsed.password or ''
+              host = parsed.hostname or ''
               port = str(parsed.port or 5432)
-              dbname = parsed.path.lstrip("/") or ""
+              dbname = parsed.path.lstrip('/') or ''
 
               return {
-                  "dbname": dbname,
-                  "user": username,
-                  "password": password,
-                  "host": host,
-                  "port": port,
+                  'dbname': dbname,
+                  'user': username,
+                  'password': password,
+                  'host': host,
+                  'port': port,
               }
 
           conn = psycopg2.connect(**parse_postgres_url('${DATABASE_URL}'))
           conn.autocommit = True
           cur = conn.cursor()
-          cur.execute("""
+          cur.execute(\"\"\"
           DO $$ DECLARE
               r RECORD;
           BEGIN
@@ -100,7 +101,8 @@ jobs:
                   EXECUTE 'DROP TABLE IF EXISTS public.' || quote_ident(r.tablename) || ' CASCADE';
               END LOOP;
           END $$;
-          """)
+          \"\"\")
           cur.close()
           conn.close()
           "
+
