--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Sitelytics Backend Service"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "aiosqlite>=0.21.0",
+  "aiosqlite>=0.21.0",
     "annotated-doc==0.0.4",
     "annotated-types==0.7.0",
     "anyio==4.11.0",
@@ -43,6 +43,7 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "asyncpg>=0.30.0",
     "psycopg[binary]>=3.2.12",
+  "python-multipart>=0.0.5",
 ]
 
 [tool.setuptools.packages.find]
