--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # For local development (SQLite):
-DATABASE_URL=sqlite+aiosqlite:///./site_audit.db
+# DATABASE_URL=sqlite+aiosqlite:///./site_audit.db
 
 # For production (PostgreSQL):
-# DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/site_audit_db
+DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/site_audit_db
 
 # JWT Configuration
 JWT_SECRET_KEY=your-secret-key
@@ -10,14 +10,13 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
 # Email Configuration
 MAIL_MAILER=smtp
-MAIL_HOST=
+MAIL_HOST=smtp.example.com
 MAIL_PORT=587
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=your-email-username
+MAIL_PASSWORD=your-email-password
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=
-MAIL_FROM_NAME=
-
+MAIL_FROM_ADDRESS=your-email@example.com
+MAIL_FROM_NAME=Your Name
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id-for-ios
 GOOGLE_CLIENT_ID_ANDROID=your-google-client-id-for-android
