--- a/.github/workflows/cd_prod.yml
+++ b/.github/workflows/cd_prod.yml
@@ -23,7 +23,7 @@ jobs:
       APP_PORT: ${{ secrets.PROD_APP_PORT }}
       APP_URL: ${{ secrets.PROD_APP_URL }}
       ENV_FILE: ${{ secrets.PROD_ENV_FILE }}
-      SSH_PORT: ${{ secrets.PROD_SSH_PORT }}
+      DATABASE_URL: ${{ secrets.PROD_DATABASE_URL }}
       NGINX_LOG_PREFIX: sitemate-prod
     steps:
       - name: Checkout repository
@@ -99,18 +99,14 @@ jobs:
 
               sudo apt-get update -y
               sudo apt-get install -y python3 python3-venv python3-pip nginx certbot python3-certbot-nginx curl libpq-dev
-
-              python3.12 -m venv venv
-              source venv/bin/activate
-
               if ! command -v uv >/dev/null 2>&1; then
                 curl -LsSf https://astral.sh/uv/install.sh | sh
                 export PATH="$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
               fi
-              
-              uv add psycopg psycopg2-binary
+
+              python3.12 -m venv venv
+              source venv/bin/activate
               uv sync 
-              uv run alembic upgrade head
 
               NGINX_SITE="/etc/nginx/sites-available/${SERVICE}.conf"
               sudo mv /tmp/site-audit-ai.conf "$NGINX_SITE"
