--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -23,7 +23,7 @@ jobs:
       APP_PORT: ${{ secrets.STAGING_APP_PORT }}
       APP_URL: ${{ secrets.STAGING_APP_URL }}
       ENV_FILE: ${{ secrets.STAGING_ENV_FILE }}
-      SSH_PORT: ${{ secrets.STAGING_SSH_PORT }}
+      DATABASE_URL: ${{ secrets.STAGING_DB_URL }}
       NGINX_LOG_PREFIX: sitemate-staging
     steps:
       - name: Checkout repository
@@ -100,18 +100,14 @@ jobs:
               sudo apt-get update -y
               sudo apt-get install -y python3 python3-venv python3-pip nginx certbot python3-certbot-nginx curl libpq-dev
 
-              python3.12 -m venv venv
-              source venv/bin/activate
-
-
               if ! command -v uv >/dev/null 2>&1; then
                 curl -LsSf https://astral.sh/uv/install.sh | sh
                 export PATH="$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
               fi
 
-              uv add psycopg psycopg2-binary
+              python3.12 -m venv venv
+              source venv/bin/activate     
               uv sync 
-              uv run alembic upgrade head
               
               NGINX_SITE="/etc/nginx/sites-available/${SERVICE}.conf"
               sudo mv /tmp/site-audit-ai.conf "$NGINX_SITE"
