--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Install dependencies
         run: |
           source venv/bin/activate
+          uv add psycopg2
           uv sync
 
       - name: Run tests
