--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,13 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
 
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+ADMIN_EMAIL=admin@tokugawa.emerj.net
+
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id-for-ios
 GOOGLE_CLIENT_ID_ANDROID=your-google-client-id-for-android
