--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,8 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "asyncpg>=0.30.0",
     "psycopg[binary]>=3.2.12",
-  "python-multipart>=0.0.5",
+    "python-multipart>=0.0.5",
+    "psycopg2",
 ]
 
 [tool.setuptools.packages.find]
