--- a/.github/workflows/cd_prod.yml
+++ b/.github/workflows/cd_prod.yml
@@ -105,7 +105,9 @@ jobs:
 
               python3.12 -m venv venv
               source venv/bin/activate
-              uv sync 
+              uv sync
+              uv run alembic revision --autogenerate -m "production deployment migration"
+              uv run alembic upgrade head 
 
               NGINX_SITE="/etc/nginx/sites-available/${SERVICE}.conf"
               sudo mv /tmp/site-audit-ai.conf "$NGINX_SITE"
