--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     "PyJWT==2.10.1",
     "uuid-extension==0.2.0",
     "email-validator==2.2.0",
-
+    "jinja2>=3.1.6",
+    "aiosqlite>=0.21.0",
 ]
 
 # ------------------------
