--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "psycopg[binary]>=3.2.12",
     "python-multipart>=0.0.5",
     "bcrypt>=5.0.0",
+    "jinja2>=3.1.6",
 ]
 
 [tool.setuptools.packages.find]
