Add Debug env step in CI workflow
Add debugging step to print DATABASE_URL

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,10 @@ jobs:
           uv add psycopg2
           uv sync
 
+      - name: Debug env
+        run: |
+          echo "$DATABASE_URL"
+    
       - name: Run tests
         run: |
           source venv/bin/activate
