Validate DATABASE_URL before running tests
Add check for empty DATABASE_URL in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,12 @@ jobs:
 
       - name: Debug env
         run: |
-          echo "$DATABASE_URL"
+          if [ -z "$DATABASE_URL" ]; then
+            echo "DATABASE_URL is empty!"
+            exit 1
+          else
+            echo "DATABASE_URL is set (value masked)."
+          fi
     
       - name: Run tests
         run: |
