--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,11 @@ MAIL_FROM_NAME=
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id-for-ios
 GOOGLE_CLIENT_ID_ANDROID=your-google-client-id-for-android
+
+
+# Apple OAuth Configuration
+APPLE_CLIENT_ID=your-apple-client-id
+APPLE_TEAM_ID=your-apple-team-id
+APPLE_KEY_ID=your-apple-key-id
+APPLE_PRIVATE_KEY_PATH=path/to/your/apple/private/key.p8
+APPLE_REDIRECT_URI=your-apple-redirect-uri
