--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "site-audit-ai-be"
 version = "0.1.0"
@@ -39,6 +43,8 @@ dependencies = [
     "asyncpg>=0.30.0",
     "alembic>=1.17.2",
     "psycopg2-binary>=2.9.11",
+    "selenium>=4.18.1",
+    "webdriver-manager>=4.0.1",
 ]
 
 # ------------------------
@@ -71,3 +77,6 @@ dev = [
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
 ]
+
+[tool.setuptools]
+packages = ["app"]
