--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -1,9 +1,9 @@
 name: CD Staging
 
 on:
-  pull_request:
-     branches: [staging]
-     types: [closed]
+  push:
+    branches:
+      - staging
   workflow_dispatch:
 
 concurrency:
@@ -40,6 +40,7 @@ jobs:
         env:
           APP_ROOT: ${{ env.DEPLOY_PATH }}
         run: |
+          sudo apt-get update && sudo apt-get install -y gettext-base
           if [ -z "$SERVER_NAME" ] || [ -z "$APP_PORT" ]; then
             echo "::error::SERVER_NAME or APP_PORT secrets missing for $DEPLOY_ENV"
             exit 1
@@ -56,7 +57,7 @@ jobs:
       - name: Configure SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.STAGING_SSH_KEY }}
+            ssh-private-key: ${{ secrets.STAGING_SSH_KEY }}
 
       - name: Add remote host to known hosts
         run: |
@@ -65,6 +66,9 @@ jobs:
       - name: Ensure remote directory exists
         run: |
           ssh -p "${SSH_PORT:-22}" "$DEPLOY_USER@$DEPLOY_HOST" "mkdir -p '$DEPLOY_PATH'"
+
+      - name: Install rsync
+        run: sudo apt-get update && sudo apt-get install -y rsync ssh
 
       - name: Rsync application to server
         run: |
@@ -107,6 +111,7 @@ jobs:
               python3.12 -m venv venv
               source venv/bin/activate     
               uv sync 
+              mkdir -p alembic/versions
               uv run alembic revision --autogenerate -m "staging deployment migration"
               uv run alembic upgrade head
               
