fix: change workflow run condition

--- a/.github/workflows/cd_prod.yml
+++ b/.github/workflows/cd_prod.yml
@@ -1,9 +1,9 @@
 name: CD Prod
 
 on:
-  pull_request:
-     branches: [main]
-     types: [closed]
+  push:
+    branches:
+      - production
   workflow_dispatch:
 
 concurrency:
