--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -76,6 +76,7 @@ jobs:
             --exclude ".git" \
             --exclude "__pycache__" \
             --exclude ".venv" \
+            --exclude "alembic/versions" \
             -e "ssh -p ${SSH_PORT:-22}" \
             ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH"
 
