--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
   "python-multipart>=0.0.5",
   "psycopg2-binary>=2.9.11",
   "alembic-postgresql-enum>=1.8.0",
+  "selenium>=4.18.1",
+  "webdriver-manager>=4.0.1",
 ]
 
 [tool.setuptools.packages.find]
