--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # For local development (SQLite):
-DATABASE_URL=sqlite+aiosqlite:///./site_audit.db
+DATABASE_URL="postgresql+asyncpg://site_audit_user:supersecret@localhost:5432/site_audit_db"
 
 # For production (PostgreSQL):
 # DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/site_audit_db
@@ -10,19 +10,13 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
 # Email Configuration
 MAIL_MAILER=smtp
-MAIL_HOST=
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=judyhens247@gmail.com
+MAIL_PASSWORD=oizo ghjs trrf zkfl
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
-
-# Email Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
 ADMIN_EMAIL=admin@tokugawa.emerj.net
 
 # Google OAuth Configuration
