--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=judyhens247@gmail.com
-MAIL_PASSWORD=oizo ghjs trrf zkfl
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
