fix: add cerbort setup step

--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -125,9 +125,8 @@ jobs:
                 --non-interactive \
                 --agree-tos \
                 --email $EMAIL \
-                --redirect \
-                --deploy-hook "systemctl reload nginx"
-
+                --redirect 
+                
               sudo nginx -t
               sudo systemctl reload nginx
 
