fix: remove comma

--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -48,7 +48,7 @@ jobs:
           fi
           SERVICE_USER_VALUE="${SERVICE_USER:-$DEPLOY_USER}"
           SERVICE_GROUP_VALUE="${SERVICE_GROUP:-$SERVICE_USER_VALUE}"
-          export SERVER_NAME APP_PORT APP_ROOT NGINX_LOG_PREFIX DEPLOY_ENV, EMAIL
+          export SERVER_NAME APP_PORT APP_ROOT NGINX_LOG_PREFIX DEPLOY_ENV EMAIL
           export SERVICE_USER="$SERVICE_USER_VALUE"
           export SERVICE_GROUP="$SERVICE_GROUP_VALUE"
           export PYTHON_BIN="${APP_ROOT}/.venv/bin/python"
