--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ ADMIN_EMAIL=admin@tokugawa.emerj.net
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id-for-ios
 GOOGLE_CLIENT_ID_ANDROID=your-google-client-id-for-android
+
+GLM_API_URL = 
+GLM_API_KEY =
+
