--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ dependencies = [
   "psycopg2-binary>=2.9.11",
   "alembic-postgresql-enum>=1.8.0",
   "jinja2>=3.1.6",
+  "selenium>=4.38.0",
+  "zai-sdk>=0.0.4.2",
+  "openai>=2.8.1",
 ]
 
 [tool.setuptools.packages.find]
