docs: updates env sample

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,6 @@ ADMIN_EMAIL=admin@tokugawa.emerj.net
 GOOGLE_CLIENT_ID=your-google-client-id-for-ios
 GOOGLE_CLIENT_ID_ANDROID=your-google-client-id-for-android
 
-GLM_API_URL = 
-GLM_API_KEY =
+OPENROUTER_API_KEY = 
+
 
