--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -60,6 +60,7 @@ jobs:
         with:
             ssh-private-key: ${{ secrets.STAGING_SSH_KEY }}
 
+
       - name: Add remote host to known hosts
         run: |
           ssh-keyscan -p "${SSH_PORT:-22}" "$DEPLOY_HOST" >> ~/.ssh/known_hosts
@@ -92,16 +93,19 @@ jobs:
       - name: Install dependencies, run migrations, restart services
         run: |
           ssh -p "${SSH_PORT:-22}" "$DEPLOY_USER@$DEPLOY_HOST" \
-            "DEPLOY_PATH='$DEPLOY_PATH' SERVICE_NAME='$SERVICE_NAME' DEPLOY_ENV='$DEPLOY_ENV' APP_PORT='$APP_PORT' bash -s" <<'EOF'
+            "DEPLOY_PATH='$DEPLOY_PATH' SERVER_NAME='$SERVER_NAME' EMAIL='$EMAIL' SERVICE_NAME='$SERVICE_NAME' DEPLOY_ENV='$DEPLOY_ENV' APP_PORT='$APP_PORT' bash -s" <<'EOF'
               set -euo pipefail
               export PATH="$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
               APP_DIR="${DEPLOY_PATH}"
               SERVICE="${SERVICE_NAME}"
+              SERVER_NAME="${SERVER_NAME}"
+              EMAIL="${EMAIL}"
+
               if [ ! -d "$APP_DIR" ]; then
                 mkdir -p "$APP_DIR"
               fi
               cd "$APP_DIR"
-              export SERVER_NAME APP_PORT APP_ROOT NGINX_LOG_PREFIX DEPLOY_ENV EMAIL
+
               sudo apt-get update -y
               sudo apt-get install -y python3 python3-venv python3-pip nginx certbot python3-certbot-nginx curl libpq-dev
 
@@ -122,10 +126,10 @@ jobs:
               sudo ln -sf "$NGINX_SITE" "/etc/nginx/sites-enabled/${SERVICE}.conf"
               export SERVER_NAME
               sudo certbot --nginx \
-                -d $SERVER_NAME \
+                -d ${SERVER_NAME} \
                 --non-interactive \
                 --agree-tos \
-                --email $EMAIL \
+                --email ${EMAIL} \
                 --redirect 
                 
               sudo nginx -t
