--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-# For local development (SQLite):
 DATABASE_URL="postgresql+asyncpg://site_audit_user:supersecret@localhost:5432/site_audit_db"
 
-# For production (PostgreSQL):
 # DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/site_audit_db
+
+CELERY_BROKER_URL=amqp://guest:guest@localhost:5672//
+# Redis as result backend (fast result storage)
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
 # JWT Configuration
 JWT_SECRET_KEY=your-secret-key
@@ -23,6 +25,8 @@ ADMIN_EMAIL=admin@tokugawa.emerj.net
 GOOGLE_CLIENT_ID=your-google-client-id-for-ios
 GOOGLE_CLIENT_ID_ANDROID=your-google-client-id-for-android
 
-OPENROUTER_API_KEY = 
+# LLM API Keys
+GOOGLE_GEMINI_API_KEY=your-gemini-api-key-here
+# OPENROUTER_API_KEY=your-openrouter-api-key-here  # Alternative LLM provider
 
 
