--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,12 @@ dependencies = [
   "selenium>=4.38.0",
   "zai-sdk>=0.0.4.2",
   "openai>=2.8.1",
+  "google-generativeai>=0.8.0",
   "pre-commit>=4.5.0",
+  "celery>=5.4.0",
+  "kombu>=5.4.0",
+  "redis>=5.0.0",
+  "amqp>=5.2.0",
 ]
 
 [tool.setuptools.packages.find]
