fix: added chrome-options for server

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
   "alembic-postgresql-enum>=1.8.0",
   "jinja2>=3.1.6",
   "selenium>=4.38.0",
+  "webdriver-manager>=4.0.0",
   "zai-sdk>=0.0.4.2",
   "openai>=2.8.1",
   "google-generativeai>=0.8.0",
