--- a/.github/workflows/branch-name-check.yml
+++ b/.github/workflows/branch-name-check.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check-branch:
-    runs-on: [self-hosted, site-audit]
+    runs-on: site-audit
     steps:
       - name: Get branch name
         id: branch
