--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ concurrency:
 
 jobs:
   tests:
-    runs-on: self-hosted
+    runs-on:
+        group: site-audit
     env:
       DATABASE_URL: ${{ secrets.CI_DB }}
     steps:
