Change CI runner group from 'site-audit' to 'site'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ concurrency:
 jobs:
   tests:
     runs-on:
-        group: site-audit
+        group: site
     env:
       DATABASE_URL: ${{ secrets.CI_DB }}
     steps:
