Change CI runner group to site-audit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ concurrency:
 jobs:
   tests:
     runs-on:
-        group: site
+        - site-audit
     env:
       DATABASE_URL: ${{ secrets.CI_DB }}
     steps:
