--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Set up Python 3.12 and dependencies
         run: |
-          python3.12 -m venv venv
-          source venv/bin/activate
+          python3.12 -m venv .venv
+          source .venv/bin/activate
           python -m pip install --upgrade pip
 
       - name: Install dependencies
