--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          source venv/bin/activate
+          source .venv/bin/activate
           uv add psycopg2
           uv add alembic-postgresql-enum
           uv sync
