fix: ensures scanjob exists in db before celery processes try to read it

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,5 @@ APPLE_TEAM_ID=your-apple-team-id
 APPLE_KEY_ID=your-apple-key-id
 APPLE_PRIVATE_KEY_PATH=path/to/your/apple/private/key.p8
 APPLE_REDIRECT_URI=your-apple-redirect-uri
+
+CHROMEDRIVER_PATH=
