Add SSE support for real-time scan progress updates
- Implement SSE endpoint in app/features/scan/routes/sse.py
- Integrate SSE publishing in scan job tasks
- Update pyproject.toml and uv.lock to include sse-starlette dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
   "kombu>=5.4.0",
   "redis>=5.0.0",
   "amqp>=5.2.0",
+  "sse-starlette>=2.3.3",
 ]
 
 [tool.setuptools.packages.find]
