fix: remove selenium based web crawler with LLM

--- a/.env.example
+++ b/.env.example
@@ -28,10 +28,7 @@ GOOGLE_CLIENT_ID_ANDROID=your-google-client-id-for-android
 
 # LLM API Keys
 GOOGLE_GEMINI_API_KEY=your-gemini-api-key-here
-# OPENROUTER_API_KEY=your-openrouter-api-key-here  # Alternative LLM provider
-
-
-
+OPENROUTER_API_KEY=your-openrouter-api-key-here  # Alternative LLM provider
 
 # Apple OAuth Configuration
 APPLE_CLIENT_ID=your-apple-client-id
