--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
   "kombu>=5.4.0",
   "redis>=5.0.0",
   "amqp>=5.2.0",
+  "beautifulsoup4>=4.12.0"
 ]
 
 [tool.setuptools.packages.find]
